--- a/src/global-styles/style.scss
+++ b/src/global-styles/style.scss
@@ -34,3 +34,10 @@ p {
   padding-top: 50px;
   padding-bottom: 50px;
 }
+
+@media screen and (max-width: 400px) {
+  #home-page {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+}
