--- a/src/product-styles/product.styles.scss
+++ b/src/product-styles/product.styles.scss
@@ -231,6 +231,7 @@
 
     @media screen and (max-width: 400px) {
         padding: 2.4rem;
+        border-radius: 0;
 
         
         & &__header {
